--- a/scoldbot/base-config.yaml
+++ b/scoldbot/base-config.yaml
@@ -1,9 +1,48 @@
-blacklist:
+watchword:
+# watchword words will notify an admin in a private channel, but take no action
+  - stupid
+
+scoldword:
+# scoldlist words will trigger a -1 rep
   - damn
   - darn
   - sped
 
-quips:
+kickword:
+# admonishlist words will trigger a -5 rep
+
+allowlist: []
+# put phrases in this list to stop blocking of scold/banned words if they triggered out of context
+
+autokickword: []
+# words so bad, that they get an automatic kick and trigger a -10 rep
+
+rep-start: 100
+# Starting rep value
+
+rep-kick:
+# Levels at which you'll be kicked 
+  - 90
+  - 80
+  - 70
+  - 60
+  - 50
+  - 40
+  - 30
+  - 20
+  - 10
+  - 9
+  - 8
+  - 7
+  - 6
+  - 5
+  - 4
+  - 3
+  - 2
+  - 1
+
+scolds:
+# Scolding sentences that will be sent as a reply to the offending message
   - Do you talk to your grandma like that?
   - What would meemaw think of your language.
   - You should be embarrased!
