## Add database - Each time user violates policy:   - update's user's rep in db   - insert's last message text

--- a/scoldbot/base-config.yaml
+++ b/scoldbot/base-config.yaml
@@ -39,6 +39,9 @@ rep-kick:
   - 2
   - 1
 
+admin:
+  - @beardedtek:beardedtek.com
+
 scolds:
 # Scolding sentences that will be sent as a reply to the offending message
   - Do you talk to your grandma like that?
